--- a/3/3.tex
+++ b/3/3.tex
@@ -10,8 +10,8 @@
 \usepackage{dsfont}
 \usepackage{upgreek}
 \usepackage{color, colortbl}
-\usepackage{listings}
 \usepackage{ amssymb }
+\usepackage{listings}
 \usepackage{tikz}
 
 \graphicspath{
@@ -82,7 +82,7 @@
 Рассмотрим формат CSR:
 \begin{enumerate}
 	\item aelem - массив, хранящий все $a_{ij}\neq 0$ в строках
-	\item jptr - массив размерности aelem, указывает $N_j$ элемента $a_{ij}$
+	\item jptr - массив размерности aelem, указывает номер $N_j$ элемента $a_{ij}$
 	\item iptr - массив размерности $n+1$ ($n$ - размерность СЛАУ), хранит число элементов $a_{ij}\neq 0$ в строке
 	
 	iptr$[i+1]$ - iptr$[i]$ - число элементов в i-ой строке
@@ -112,30 +112,43 @@ aelem: $\left[\left[ 9, 3, 1, 1 \right], \left[11, 2, 1, 2\right], \left[1, 10, 
 
 jptr: $\left[\left[1, 4, 5, 7\right], \left[2, 3, 4, 7\right], \left[2, 3, 4\right],\left[1, 2, 3, 4, 5\right],\left[1, 4, 5, 7 \right],\left[6\right],\left[1, 2, 5, 7\right] \right]$.
 
-iptr: $\left[1, 5, 9, 12, 17, 21, 22, 26\right]$.
+iptr: $\left[1, 5, 9, 12, 17, 21, 22, 26\right]$. \\
 
-%adiag: $\left[9, 11, 10, 9, 12, 8, 8\right]$.
+Рассмотрим формат CSLR:
 
-%altr: $\left[1,2, 1, 2, 1, 1, 2, 2, 3\right]$.
-
+Обычно такой формат используется для хранения симметричных матриц, т.е. в памяти хранятся только элементы верхнего (или нижнего) треугольника.
 Если матрица несимметрична, то храним ещё и элементы нижнего треугольника, но уже по столбцам (для сохранения структуры).
 
-К ЧЕМУ ЭТО
+В нашем примере:
 
-autr: $\left[2, 3, 1, 2, 1, 1, 1, 2, 1\right]$.
+adiag: $\left[9, 11, 10, 9, 12, 8, 8\right]$ -- все диагональные элементы.
+
+altr: $\left[1,2, 1, 2, 1, 1, 2, 2, 3\right]$ -- элементы нижнего треугольника.
+
+autr: $\left[2, 3, 1, 2, 1, 1, 1, 2, 1\right]$ -- элементы верхнего треугольника.
 
 jptr: $\left[2, 1, 2, 3, 1, 4, 1, 2, 5\right]$.
 
 iptr: $\left[1, 1, 1, 2, 5, 7, 7, 10\right]$.
 
-Я НЕ ПОНИМАЮ
 
 Входные данные: $\overline{x}$, aelem, jptr, iptr, n.
 \[
 z = A\overline{x}, \ A - CSR
 \]
 
-как оформить код (а главное, зачем в нем столько скобок) - а хуй его знает
+\newpage
+\textbf{\textit{Листинг 1 - алгоритм составления вектора $z$}}
+\begin{lstlisting}
+i: 1,.., n 
+{
+	z[i]=0;
+	j: iptr[i],..,iptr[i+1]-1 
+	{
+		z[i]=z[i]+x[jptr[j]]*aelem[j];
+	}
+}
+\end{lstlisting}
 
 \newpage
 	\begin{center}
@@ -153,16 +166,15 @@ A=\begin{bmatrix}
 \end{bmatrix}
 \]
 
-Чтобы не испортилась симметричность портрета, искусственно обнулим необходимые элементы массива aelem.  
+Чтобы не испортилась симметричность портрета, искусственно обнулим необходимые элементы массива aelem.  \\
 
-(я не понимаю к чему относится часть первой строки в коде после точки с запятой)
-
+\textbf{\textit{Листинг 2 - алгоритм задания граничных условий}}
 \begin{lstlisting}
-	i = iptr[k]; iptr[k+1]-1
+	i = iptr[k],..,iptr[k+1]-1
 	{ 
-		if jptr[i=k]
+		if jptr[i]=k:
 			aelem[jptr[k]]=1;
-		else
+		else:
 			aelem[jptr[k]]=0;
 	}
 \end{lstlisting}
@@ -189,18 +201,38 @@ $U$ - верхнетреугольная матрица;\\
 		\textbf{Предобусловливание}
 	\end{center}
 	
-	Число обусловленности: $\frac{\lambda_{min}}{\lambda_{max}}<1$
+	Число обусловленности: $\frac{\lambda_{max}}{\lambda_{min}}$
 	
-	Так оно меньше единицы или больше?
-	\begin{figure}[h]
-		\includegraphics[height=0.2\linewidth]{уааа.png}
-	\end{figure}
+	Если число обусловленности велико, система плохо обусловлена, и небольшие ошибки в данных могут привести к большим ошибкам в решении. Если число обусловленности близко к 1, система хорошо обусловлена, и решения будут стабильными.
+	
+	Рассмотрим СЛАУ $Ax = b$, где $A$ -- плохо обусловленная матрица. 
+	
+	Пусть $M$ -- невырожденная матрица размерности $n \times n$. Домножим СЛАУ на матрицу, обратную $M$:
+	\[M^{-1}Ax = M^{-1}b\]
+	\[A^*x = b^*\]
 	
 	M - матрица предобусловливания
 	
 	\begin{enumerate}
 		\item M должна быть по возможности близка к A (пример: M = diag(A)).
 		\item M должна быть легко вычислима.
-		\item M должна быть обратима.
+		\item M должна быть легко обратима.
 	\end{enumerate}
 \end{document}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
