--- a/6/lec6.tex
+++ b/6/lec6.tex
@@ -75,7 +75,26 @@
 	||\vec n|| = 1
 	\end{cases}\]
 
-	% тут рисунок
+	\begin{tikzpicture}
+    % Оси
+    \draw[->] (0, 0) -- (4, 0) node[right] {$x$}; % Ось X
+    \draw[->] (0, 0) -- (0, 4) node[above] {$y$}; % Ось Y
+
+    % Кривая
+    \draw[thick] plot [domain=1:3] (\x, {2/\x}); % Кривая y = 2/x
+
+    % Точка (x, y)
+    \fill (2, 1) circle (2pt); % Точка на кривой
+    \node[below left] at (2, 1) {$(x, y)$};
+
+    % Линии dx и dy
+    \draw[dashed] (2, 1) -- (3, 1) node[midway, below] {$dx$}; % dx
+    \draw[dashed] (2, 1) -- (2, 2) node[midway, right] {$dy$}; % dy
+
+    % Обозначения
+    \node at (3.2, 1) {$l_x$};
+    \node at (2, 2.2) {$l_y$};
+\end{tikzpicture}
 	
 	Составим невязку:
 	\[r(x, y) = -\frac{\partial}{\partial x} \left( K \frac{\partial u}{\partial x} \right) -\frac{\partial}{\partial y} \left( K \frac{\partial u}{\partial y} \right) + bu - f = 0\]
@@ -118,30 +137,52 @@
  	$ u(x, y) $ - перемещения \\
  	\[ \varepsilon = [\varepsilon_x \quad \varepsilon_y]^T, \quad \varepsilon_x = - \frac{\partial u}{\partial y},\quad \varepsilon_y = - \frac{\partial u}{\partial y} \]
 	\[ \varepsilon = Lu,\quad L = \left[- \frac{\partial}{\partial x} \quad - \frac{\partial}{\partial y}\right]^T \]
-
-	\[ \sigma = k \partial = kLu \]
-
+	\[ \sigma = k \varepsilon = kLu \]
+	%тут рисунок
 	\[ d \Omega = dxdy \]
-
 	\[ \sigma_x dy + \sigma_y dx + (f-bu) dxdy = \left(\sigma_x + \frac{\partial \sigma_x}{\partial x}dx\right) dy + \left(\sigma_y + \frac{\partial \sigma_y}{\partial y}dy\right) dx \]
-
 	\[ \frac{\partial \sigma_x}{\partial x} + \frac{\partial \sigma_y}{\partial y} = f - bu \]
-
 	\[ L_* = \left[\frac{\partial}{\partial x} \quad \frac{\partial}{\partial y}\right],\quad L_* = -L^T \]
-
 	\[ L_* \sigma = L_*kLu = f - bu \]
-
 	\[ \left[\frac{\partial}{\partial x} \quad \frac{\partial}{\partial y}\right] \cdot k \cdot 
 	\begin{bmatrix}
 		-\frac{\partial u}{\partial x}\\
 		- \frac{\partial u}{\partial y}
 	\end{bmatrix}
  	= f-bu \]
+	\[-\frac{\partial}{\partial x} \left ( K \frac{\partial u}{\partial x} \right) - \frac{\partial}{\partial y} \left ( K \frac{\partial u}{\partial y} \right) = f \cdot bu \Leftrightarrow \eqref{2d_eq}\]
+	
+	%тут рисунок
+	\[\Gamma_1: u(\xi) = \hat u(\xi)\]
+	\[dx = \cos \alpha_y d\xi = l_y d\xi,\ \ dy = \cos \alpha_x d\xi = l_x d\xi\]
+	\[\sigma_y dx + \sigma_x dy + \hat \sigma d\xi = 0\]
+	\[\sigma_x = K \varepsilon_x = -K \frac{\partial u}{\partial x},\ \sigma_y = K \varepsilon_y = -K \frac{\partial u}{\partial y}\]
+	
+	Тогда:
+	\[-K \frac{\partial u}{\partial y} dx -K \frac{\partial u}{\partial x} dy + \hat \sigma d\xi = 0\]
+	\[-K \frac{\partial u}{\partial y} l_y d\xi -K \frac{\partial u}{\partial x} l_x d\xi + \hat \sigma d\xi = 0\]
+	\[K \frac{\partial u}{\partial n} = \hat \sigma\]
+	
+	Отсюда:
+	\begin{equation}\label{2d_eq_2}
+	\iint \limits_{\Omega} \left(\frac{\partial v}{\partial x} K \frac{\partial u}{\partial x} + \frac{\partial v}{\partial y} K \frac{\partial u}{\partial y} + bu \cdot v - f \cdot v\right) dx dy - \\
+	\int \limits_{\Gamma} \underbrace{ \left(K \frac{\partial u}{\partial x} l_x + K \frac{\partial u}{\partial y} l_y\right)}_{K \cdot \frac{\partial u}{\partial n} = \hat \sigma(\xi)}  \cdot v d\xi = 0 
+	\end{equation}
+	
+	\[\iint \limits_{\Omega} ((Lu)^T K (Lu) + v^T bu - v^T f) dxdy - \int \limits_{\Gamma_2} v^T \hat \sigma d\xi = 0\]
+	
+	
+		
 	
 	
 	
 	
 	
+	
+	
+	
+	
+		
 	
 	
 	
