--- a/8/8.tex
+++ b/8/8.tex
@@ -26,4 +26,97 @@
 	\end{center}
 	
 	
+	Связь между координатами:
+	\[
+	\begin{cases}
+		L_i+L_j+L_k=1 \\
+		x=L_ix_i+L_jx_j+L_kx_k \\
+		y=L_iy_i+L_jy_j+L_ky_k
+	\end{cases}
+	\]
+	
+	$V=hdS, h=const-\text{толщина элемента}$
+	
+	\[
+	h\iint\limits_Sf(x,y)\ dxdy= h\int\limits_0^1\int\limits_0^{1-L_j} f(L_i,L_j,L_k)|J|\ dL_iL_j
+	\]
+	\[
+	J=\begin{bmatrix}
+		\dfrac{\partial x}{\partial L_i} & \dfrac{\partial x}{\partial L_j} \\
+		
+		\dfrac{\partial y}{\partial L_i} & \dfrac{\partial y}{\partial L_j}
+	\end{bmatrix} = \begin{bmatrix}
+	x_i-x_k & x_j-x_k \\
+	y_i-y_k & y_j-y_k
+	\end{bmatrix} \Rightarrow |J|=\Delta
+	\]
+	
+	
+	Интегральные формулы, упрощающие вычисления:
+	\[
+	\int\limits_{\Gamma_{ij}} L_i^{\alpha}L_j^{\beta} \ d\Gamma = \frac{\alpha!\beta!}{(\alpha+\beta+1)!}\cdot l_{ij}
+	\]
+	\[
+		\int\limits_{S} L_i^{\alpha}L_j^{\beta}L_k^{\gamma} \ dS = \frac{\alpha!\beta!\gamma!}{(\alpha+\beta+\gamma+2)!}\cdot 2S \tag{1}
+	\]
+	
+	
+	Возвращаемся к формуле из прошлой лекции:
+	\[
+	\int\limits_{\Omega}  N^T N\ dx dy = \int\limits_{\Omega}  
+	\begin{bmatrix}
+		N_iN_i & N_iN_j & N_iN_k \\
+		N_iN_j & N_jN_j & N_jN_k \\
+		N_iN_k & N_jN_k & N_kN_k \\
+	\end{bmatrix}
+	\ dx dy = 
+	\]
+	\[
+	= \int\limits_S \begin{bmatrix}
+		L_iL_i & L_iL_j & L_iL_k \\
+		L_iL_j & L_jL_j & L_jL_k \\
+		L_iL_k & L_jL_k & L_kL_k \\
+	\end{bmatrix} |J| \ dL_i L_j = \dfrac{S}{12} \begin{bmatrix}
+	2 & 1 & 1 \\ 1 & 2 & 1 \\ 1 & 1 & 2
+	\end{bmatrix}
+	\]
+	
+	Вычисляем компоненты матрицы по формуле (1):
+	\[
+	\int\limits_{\Omega} L_i^2 \ dS = \int\limits_{\Omega} L_i^2L_j^0L_k^0 \ dS=  \dfrac{2!\, 0!\, 0!}{(2+0+0+2)!}\cdot 2S=\frac{S}{6}
+	\]
+	\[
+	\int\limits_SN^{\text{T}} \ dS = \int\limits_S \begin{bmatrix}
+		N_i \\ N_j \\ N_k
+	\end{bmatrix} \, dxdy = \int\limits_S \begin{bmatrix}
+	L_i \\ L_j \\ L_k
+	\end{bmatrix} \, dS = \frac{S}{3} \begin{bmatrix}
+	1 \\ 1 \\ 1
+	\end{bmatrix}
+	\]
+	
+	\[
+	\int\limits_{\Gamma} \left(K_x \cdot  \frac{\partial u}{\partial x} \cdot l_x + K_y \cdot  \frac{\partial u}{\partial y} \cdot l_y \right)v\ d\Gamma 
+	\]
+	\begin{enumerate}
+		\item или $K_x \cdot  \frac{\partial u}{\partial x} \cdot l_x + K_y \cdot  \frac{\partial u}{\partial y} \cdot l_y=\hat\sigma$ или $q$ 
+		\item или $K_x \cdot  \frac{\partial u}{\partial x} \cdot l_x + K_y \cdot  \frac{\partial u}{\partial y} \cdot l_y=-\alpha_g(u-\hat u)$ 
+	\end{enumerate}
+	
+	Рассмотрим подробнее:
+	\begin{enumerate}
+		\item $
+		\int\limits_{\Gamma} \hat \sigma \ d\Gamma = \{\delta \Phi\}^T \int\limits_{\Gamma} \hat \sigma N^T\ d\Gamma\int\limits_{\Gamma} \begin{bmatrix}
+			L_i \\ L_j \\ L_k
+		\end{bmatrix} \, d\Gamma$
+		\begin{enumerate}
+			\item $\int\limits_{\Gamma_{ij}} \begin{bmatrix}
+				L_i \\ L_j \\ 0
+			\end{bmatrix} \, d\Gamma = \int\limits_{\Gamma_{ij}} L_i^1 L_j^0 d\Gamma = \dfrac{l_{ij}}{2}\begin{bmatrix}
+			1\\1\\0
+		\end{bmatrix}$
+		\item 
+		\end{enumerate}
+	\end{enumerate}
+	
 \end{document}
