--- a/7/7.tex
+++ b/7/7.tex
@@ -242,6 +242,8 @@
 		\draw[thin, teal] (0.5, 2.25) -- (5, 2.99) node[above left] {\footnotesize $L_k = 1$};
 		
 		\draw[->][thin, teal] (2.3, 0.72) -- (2.21,1.25) node[right] {\footnotesize $L_k$};
+		\draw[->][thin, red] (1.6, 1.7) -- (2.15,1.35) node[above] {\footnotesize $L_j$};
+		\draw[->][thin] (2.75, 1.95) -- (2.5,1.6) node[above] {\footnotesize $L_i$};
 	\end{tikzpicture}
 	\end{center}
 	
