--- a/6/lec6.tex
+++ b/6/lec6.tex
@@ -14,7 +14,8 @@
 \usepackage{listings}
 \usepackage{ amssymb }
 \usepackage{tikz}
-\usetikzlibrary{decorations.markings} % Для корректной работы маркировок и стрелок
+\usetikzlibrary{decorations.markings}
+\usetikzlibrary{calc} 
 
 \begin{document}
 \section*{11/10}
@@ -31,36 +32,31 @@
 	$u(x, y)$ -- неизвестная.
 	
 	$\Omega$ -- область, где задано уравнение \eqref{2d_eq}, $\Gamma$ -- граница $\Omega$ .
+	\\
 	
+	\begin{center}
 	\begin{tikzpicture}
-    % Оси
-    \draw[->] (-1, 0) -- (3, 0) node[right] {};
-    \draw[->] (0, -1) -- (0, 3) node[above] {};
+    % Ось координат
+    \draw[->] (-1,0) -- (5,0);
+    \draw[->] (0,-1) -- (0,5);
     
-    % Область Омега
-    \draw[thick] (0.5, 0.5) .. controls (1.2, 1.8) and (2, 1.5) .. (1.5, 2.5) 
-    .. controls (0.5, 3) and (-0.5, 2) .. (0, 1) -- cycle;
-    \node at (0.8, 1.2) {$\Omega$};
-    
-    % Вектор n
-    \draw[->] (1.5, 2.5) -- (1.9, 2.9);
-    \node at (2, 2.8) {$\vec{n}$};
-    
-    % Граница Gamma1
-    \draw[decorate,decoration={markings,mark=at position 0.5 with {\arrow{>}}}] 
-        (1.5, 2.5) arc[start angle=40, end angle=210, radius=2cm];
-    \node at (-1, 1) {$\Gamma_1$};
-    
-    % Граница Gamma2
-    \draw[decorate,decoration={markings,mark=at position 0.5 with {\arrow{>}}}] 
-        (0, 1) arc[start angle=190, end angle=330, radius=1cm];
-    \node at (1, 0) {$\Gamma_2$};
-
-    % Точка O и вектор ksi
-    \node at (-0.2, -0.2) {$O$};
-    \draw[->] (0, 0) -- (0.5, 0.5);
-    \node at (0.3, 0.3) {$\vec{\xi}$};
+    % Кардиоида
+        \draw[domain=0:360,samples=200,smooth,variable=\t,rotate=-90,scale=0.5,shift={(3,3)}]
+        plot ({2*(1-cos(\t)) * cos(\t) - 6}, {2*(1-cos(\t)) * sin(\t) + 2});
+        
+        \draw[->,color=red,domain=270:340,samples=200,smooth,variable=\t,rotate=-90,scale=0.5,shift={(3,3)}]
+        plot ({2*(1-cos(\t)) * cos(\t) - 6}, {2*(1-cos(\t)) * sin(\t) + 2}) node[below] {$\xi$};
+        
+        \draw[thick,color=blue,domain=200:240,samples=200,smooth,variable=\t,rotate=-90,scale=0.5,shift={(3,3)}]
+        plot ({2*(1-cos(\t)) * cos(\t) - 6}, {2*(1-cos(\t)) * sin(\t) + 2}) node[above left] {$\Gamma_1$};
+        
+        \draw[->] (3, 1.25) -- (3, 0.5) node[right] {$\vec n$};
+        
+        \node at (3, 2) {$\Omega$};
+        \node at (4, 1.5) {$\Gamma_2$};
+        
 \end{tikzpicture}
+\end{center}
 	
 	Замкнутый контур $\Gamma$ -- гладкий, за исключением конечного числа угловых точек, в которых внутренний угол $\alpha \in [0; \pi]$.
 	\[\Gamma = \underbrace{\Gamma_1}_{\text{I рода}} \cup \underbrace{\Gamma_2}_{\text{II/III рода}}\]
@@ -75,26 +71,27 @@
 	||\vec n|| = 1
 	\end{cases}\]
 
+\begin{center}
 	\begin{tikzpicture}
-    % Оси
-    \draw[->] (0, 0) -- (4, 0) node[right] {$x$}; % Ось X
-    \draw[->] (0, 0) -- (0, 4) node[above] {$y$}; % Ось Y
+	\draw[thick] (0,0) arc[start angle=0, end angle=90, radius=3cm];
 
-    % Кривая
-    \draw[thick] plot [domain=1:3] (\x, {2/\x}); % Кривая y = 2/x
+    	% Нормаль к гипотенузе
+    	\coordinate (A) at (-0.18,0.93);
+   	\coordinate (B) at (-2.5,2.93);
+    	\coordinate (C) at (-2.5,0.93);
+     	\coordinate (MidAB) at ($ (A)!0.5!(B) $);
+	    
+    	% Вектор нормали
+    	\draw[->, thick, blue] (MidAB)++(0.31,0.31) -- ++(1.5,1.5) node[right] {$\vec n$};
+	\draw[->] (MidAB)++(0.31,0.31) -- ++(0, 1.5) node[left] {$l_y$};
+	\draw[->] (MidAB)++(0.31,0.31) -- ++(1.5, 0) node[below] {$l_x$};
+	\draw[thick] (MidAB)++(0.71, 0.31) arc[start angle=0, end angle=47, radius=0.4cm] node[right] {$\alpha_x$};
+	\draw[thick] (MidAB)++(0.31, 0.71) arc[start angle=90, end angle=47, radius=0.4cm] node[above] {$\alpha_y$};
+	\draw[dashed] (MidAB)++(0.31,1.81) -- ++(1.5, 0);
+	\draw[dashed] (MidAB)++(1.81,0.31) -- ++(0, 1.5);
 
-    % Точка (x, y)
-    \fill (2, 1) circle (2pt); % Точка на кривой
-    \node[below left] at (2, 1) {$(x, y)$};
-
-    % Линии dx и dy
-    \draw[dashed] (2, 1) -- (3, 1) node[midway, below] {$dx$}; % dx
-    \draw[dashed] (2, 1) -- (2, 2) node[midway, right] {$dy$}; % dy
-
-    % Обозначения
-    \node at (3.2, 1) {$l_x$};
-    \node at (2, 2.2) {$l_y$};
-\end{tikzpicture}
+	\end{tikzpicture}
+	\end{center}
 	
 	Составим невязку:
 	\[r(x, y) = -\frac{\partial}{\partial x} \left( K \frac{\partial u}{\partial x} \right) -\frac{\partial}{\partial y} \left( K \frac{\partial u}{\partial y} \right) + bu - f = 0\]
@@ -138,7 +135,56 @@
  	\[ \varepsilon = [\varepsilon_x \quad \varepsilon_y]^T, \quad \varepsilon_x = - \frac{\partial u}{\partial y},\quad \varepsilon_y = - \frac{\partial u}{\partial y} \]
 	\[ \varepsilon = Lu,\quad L = \left[- \frac{\partial}{\partial x} \quad - \frac{\partial}{\partial y}\right]^T \]
 	\[ \sigma = k \varepsilon = kLu \]
-	%тут рисунок
+	\begin{center}
+	\begin{tikzpicture}
+    % Прямоугольник
+    \draw[thick] (0, 0) rectangle (4, 3);
+    
+    % Центральная фигура (овал)
+    \draw[thick] (2, 1.5) ellipse (1.2 and 0.6);
+    \node at (2, 1.5) {\large $f - bu$};  % Текст внутри овала
+    
+    % Горизонтальные стрелки (слева направо)
+    \foreach \y in {0.5, 1, 1.5, 2, 2.5} {
+        \draw[->] (-0.5, \y) -- (0, \y);
+    }
+    
+    % Вертикальные стрелки (снизу вверх)
+    \foreach \x in {0.5, 1, 1.5, 2, 2.5, 3, 3.5} {
+        \draw[->] (\x, -0.5) -- (\x, 0);
+    }
+
+    % Горизонтальные стрелки справа
+    \foreach \y in {0.5, 1, 1.5, 2, 2.5} {
+        \draw[->] (4, \y) -- (4.5, \y);
+    }
+    
+    % Вертикальные стрелки сверху
+    \foreach \x in {0.5, 1, 1.5, 2, 2.5, 3, 3.5} {
+        \draw[->] (\x, 3) -- (\x, 3.5);
+    }
+    
+    % Подписи координат
+    \draw[thin] (0, 0) -- (0, -0.8);
+    \draw[thin] (4, 0) -- (4, -0.8);
+    \draw[<->][thin] (0, -0.7) -- (4, -0.7);
+    \node at (2, -1) {$dx$};    % Горизонтальная разметка снизу
+    
+    \draw[thin] (0, 0) -- (-0.8, 0);
+    \draw[thin] (0, 3) -- (-0.8, 3);
+    \draw[<->][thin] (-0.7, 0) -- (-0.7, 3);
+    \node at (-1, 1.5) {$dy$};  % Вертикальная разметка слева
+    
+    \node at (2, 4) {$\sigma_y + \frac{\partial \sigma_y}{\partial y} dy$};
+    \node at (6, 1.5) {$\sigma_y + \frac{\partial \sigma_x}{\partial x} dx$};
+
+    % Дополнительные стрелки от центрального овала
+    %\foreach \angle in {-40, -20, 0, 20, 40} {
+        %\draw[->] (2, 1.5) -- ++(\angle:1.5);
+   % }
+
+\end{tikzpicture}
+\end{center}
 	\[ d \Omega = dxdy \]
 	\[ \sigma_x dy + \sigma_y dx + (f-bu) dxdy = \left(\sigma_x + \frac{\partial \sigma_x}{\partial x}dx\right) dy + \left(\sigma_y + \frac{\partial \sigma_y}{\partial y}dy\right) dx \]
 	\[ \frac{\partial \sigma_x}{\partial x} + \frac{\partial \sigma_y}{\partial y} = f - bu \]
@@ -152,7 +198,54 @@
  	= f-bu \]
 	\[-\frac{\partial}{\partial x} \left ( K \frac{\partial u}{\partial x} \right) - \frac{\partial}{\partial y} \left ( K \frac{\partial u}{\partial y} \right) = f \cdot bu \Leftrightarrow \eqref{2d_eq}\]
 	
-	%тут рисунок
+	\begin{center}
+	\begin{tikzpicture}
+	\draw[thick] (0,0) arc[start angle=0, end angle=90, radius=3cm] node[left] {$\Gamma_2$};
+	\foreach \angle in {10, 20, 30, 40, 50, 60, 70, 80} {
+        % Координаты точек на окружности
+        \coordinate (P) at ({3*cos(\angle) - 3}, {3*sin(\angle)});
+        % Координаты направления нормали
+        \coordinate (N) at ({0.5*cos(\angle)}, {0.5*sin(\angle)});
+        % Рисуем нормали
+        \draw[<-] (P) -- ++(N);
+    }
+
+	\draw[thick] (-0.18,0.93) -- (-2.5,2.93) -- (-2.5,0.93) -- cycle;
+	\node at (-1.5, 1.15) {\footnotesize$dx$};
+	\node at (-2.25, 1.93) {\footnotesize$dy$};
+
+    	% Нормаль к гипотенузе
+    	\coordinate (A) at (-0.18,0.93);
+   	\coordinate (B) at (-2.5,2.93);
+    	\coordinate (C) at (-2.5,0.93);
+     	\coordinate (MidAB) at ($ (A)!0.5!(B) $);
+	
+	\node[left] at (MidAB) {\footnotesize$d\xi$};
+    
+    	% Вектор нормали
+    	\draw[->, thick, blue] (MidAB) -- ++(1,1.15) node[right] {$\vec n$};
+	\draw[dashed] (MidAB) -- ++(0, 1.5);
+	\draw[dashed] (MidAB) -- ++(1.5, 0);
+	\draw[thick] (MidAB)++(0.4, 0) arc[start angle=0, end angle=47, radius=0.4cm] node[right] {$\alpha_x$};
+	\draw[thick] (MidAB)++(0, 0.4) arc[start angle=90, end angle=47, radius=0.4cm] node[above] {$\alpha_y$};
+	
+	\draw[->] (-3,0.93) -- (-2.5,0.93);
+	\draw[->] (-3,1.33) -- (-2.5,1.33);
+	\draw[->] (-3,1.73) -- (-2.5,1.73);
+	\draw[->] (-3,2.13) -- (-2.5,2.13);
+	\draw[->] (-3,2.53) -- (-2.5,2.53);
+	\draw[->] (-3,2.93) -- (-2.5,2.93);
+	
+	\draw[->] (-2.4,0.43) -- (-2.4,0.93);
+	\draw[->] (-2,0.43) -- (-2,0.93);
+	\draw[->] (-1.6,0.43) -- (-1.6,0.93);
+	\draw[->] (-1.2,0.43) -- (-1.2,0.93);
+	\draw[->] (-0.8,0.43) -- (-0.8,0.93);
+	\draw[->] (-0.4,0.43) -- (-0.4,0.93);
+	
+	\node at (-3, 0.5) {$\Omega$};
+	\end{tikzpicture}
+	\end{center}
 	\[\Gamma_1: u(\xi) = \hat u(\xi)\]
 	\[dx = \cos \alpha_y d\xi = l_y d\xi,\ \ dy = \cos \alpha_x d\xi = l_x d\xi\]
 	\[\sigma_y dx + \sigma_x dy + \hat \sigma d\xi = 0\]
