prepare to merge

--- a/main.tex
+++ b/main.tex
@@ -14,6 +14,8 @@
 \usepackage{listings}
 \usepackage{ amssymb }
 \usepackage{tikz}
+\usetikzlibrary{decorations.markings}
+\usetikzlibrary{calc} 
 
 \begin{document}
 
@@ -26,6 +28,8 @@
    \input{4/lec4.tex}
    \newpage
    \input{5/lec5.tex}
+   \newpage
+   \input{6/lec6.tex}
    \newpage
 
    \end{document}
