prepare to merge

--- a/main.tex
+++ b/main.tex
@@ -27,6 +27,10 @@
    \newpage
    \input{5/lec5.tex}
    \newpage
+   \input{6/lec6.tex}
+   \newpage
+   \input{7/lec7.tex}
+   \newpage
 
    \end{document}
    
