--- a/main.tex
+++ b/main.tex
@@ -14,6 +14,8 @@
 \usepackage{listings}
 \usepackage{ amssymb }
 \usepackage{tikz}
+\usetikzlibrary{decorations.markings}
+\usetikzlibrary{calc} 
 
 \begin{document}
 
