--- a/main.tex
+++ b/main.tex
@@ -16,6 +16,7 @@
 \usepackage{tikz}
 \usetikzlibrary{decorations.markings}
 \usetikzlibrary{calc} 
+\usepackage{ wasysym }
 
 \begin{document}
 
@@ -31,7 +32,7 @@
    \newpage
    \input{6/lec6.tex}
    \newpage
-   \input{7/lec7.tex}
+   \input{7/7.tex}
    \newpage
 
    \end{document}
