--- a/6/lec6.tex
+++ b/6/lec6.tex
@@ -168,8 +168,7 @@
 	\[ d \Omega = dxdy \]
 	\[ \sigma_x dy + \sigma_y dx + (f-bu) dxdy = \left(\sigma_x + \frac{\partial \sigma_x}{\partial x}dx\right) dy + \left(\sigma_y + \frac{\partial \sigma_y}{\partial y}dy\right) dx \]
 	\[ \frac{\partial \sigma_x}{\partial x} + \frac{\partial \sigma_y}{\partial y} = f - bu \]
-	\[ L_* = \left[\frac{\partial}{\partial x} \quad \frac{\partial}{\partial y}\right],\quad L_* = -L^T \]
-	\[ L_* \sigma = L_*kLu = f - bu \]
+	\[ L_* = \left[\frac{\partial}{\partial x} \quad \frac{\partial}{\partial y}\right],\quad L_* = -L^T,\ \  L_* \sigma = L_*kLu = f - bu \]
 	\[ \left[\frac{\partial}{\partial x} \quad \frac{\partial}{\partial y}\right] \cdot k \cdot 
 	\begin{bmatrix}
 		-\frac{\partial u}{\partial x}\\
@@ -228,12 +227,10 @@
 	\end{center}
 	\[\Gamma_1: u(\xi) = \hat u(\xi)\]
 	\[dx = \cos \alpha_y d\xi = l_y d\xi,\ \ dy = \cos \alpha_x d\xi = l_x d\xi\]
-	\[\sigma_y dx + \sigma_x dy + \hat \sigma d\xi = 0\]
-	\[\sigma_x = K \varepsilon_x = -K \frac{\partial u}{\partial x},\ \sigma_y = K \varepsilon_y = -K \frac{\partial u}{\partial y}\]
+	\[\sigma_y dx + \sigma_x dy + \hat \sigma d\xi = 0,\ \ \sigma_x = K \varepsilon_x = -K \frac{\partial u}{\partial x},\ \sigma_y = K \varepsilon_y = -K \frac{\partial u}{\partial y}\]
 	
 	Тогда:
-	\[-K \frac{\partial u}{\partial y} dx -K \frac{\partial u}{\partial x} dy + \hat \sigma d\xi = 0\]
-	\[-K \frac{\partial u}{\partial y} l_y d\xi -K \frac{\partial u}{\partial x} l_x d\xi + \hat \sigma d\xi = 0\]
+	\[-K \frac{\partial u}{\partial y} dx -K \frac{\partial u}{\partial x} dy + \hat \sigma d\xi = 0,\ \ -K \frac{\partial u}{\partial y} l_y d\xi -K \frac{\partial u}{\partial x} l_x d\xi + \hat \sigma d\xi = 0\]
 	\[K \frac{\partial u}{\partial n} = \hat \sigma\]
 	
 	Отсюда:
