--- a/1/lec1.tex
+++ b/1/lec1.tex
@@ -380,7 +380,8 @@ $Q$ - кол-во степенй свободы (число неизвестны
 		\text{номера КЭ и номера узлов, из}  \\
 		\text{которых они состоят}
 	\end{matrix}	
-\] \\ 
+\] 
+\newpage
 \indent \underline{Замечания о порядке узлов, составляющих КЭ:} 
 \begin{enumerate}
 	\item Обход узлов КЭ принято делать против часовой стрелки (для того, чтобы нормали были направлены в одну сторону); 
