--- a/8/8.tex
+++ b/8/8.tex
@@ -175,7 +175,7 @@
 	d\Gamma
 	\]
 	\begin{enumerate}
-	\item \[\int \limits_{\Gamma_{ij}} \begin{bmatrix}
+	\item $$\displaystyle\int \limits_{\Gamma_{ij}} \begin{bmatrix}
 	L_iL_i & L_iL_j & 0\\
 	0 & L_j^2 & 0\\
 	0 & 0 & 0
@@ -191,7 +191,7 @@
 	1 & 2 & 0\\
 	0 & 0 & 0
 	\end{bmatrix}
-	\]
+	$$
 	(b), (c) -- аналогично
 	\end{enumerate}
 	\end{enumerate}
