--- a/8/8.tex
+++ b/8/8.tex
@@ -175,7 +175,7 @@
 	d\Gamma
 	\]
 	\begin{enumerate}
-	\item $$\displaystyle\int \limits_{\Gamma_{ij}} \begin{bmatrix}
+	\item \[\displaystyle\int \limits_{\Gamma_{ij}} \begin{bmatrix}
 	L_iL_i & L_iL_j & 0\\
 	0 & L_j^2 & 0\\
 	0 & 0 & 0
@@ -190,8 +190,7 @@
 	2 & 1 & 0\\
 	1 & 2 & 0\\
 	0 & 0 & 0
-	\end{bmatrix}
-	$$
-	(b), (c) -- аналогично
+	\end{bmatrix},\ \ \text{(b), (c) -- аналогично}
+	\]
 	\end{enumerate}
 	\end{enumerate}
