fix lib in main.tex

--- a/main.tex
+++ b/main.tex
@@ -17,6 +17,7 @@
 \usetikzlibrary{decorations.markings}
 \usetikzlibrary{calc} 
 \usepackage{ wasysym }
+\usepackage{makecell}
 
 \begin{document}
 
