--- a/12/12.tex
+++ b/12/12.tex
@@ -20,5 +20,89 @@
 \usepackage{makecell}
 
 \begin{document}
-	\section*{22/11}
+	\section*{29/11}
+	\begin{center}
+	\textbf{Четырехугольные конечные элементы}
+	
+	\textbf{Мультиплекс-элементы}
+	\end{center}
+	
+	\begin{enumerate}
+		\item $\varphi$ - аппроксимирующая функция должна быть непрерывной между элементами. 
+		
+		Предположим, что вдоль верхней и нижней сторон функция меняется по линейному закону, а вдоль вертикальных сторон, например, по кубическому.
+		\[
+		\varphi=\alpha_1+\alpha_2x+\alpha_3y+\alpha_4xy+\alpha_5y^2+\alpha_6xy^2+\alpha_7y^3+\alpha_8xy^3
+		\]
+		\[
+		\underbrace{\begin{bmatrix}
+			1 & x_1 & y_1 & x_1y_1 & y_1^2 & x_1y_1^2 & y_1^3 & x_1y_1^3 \\
+			1 & x_2 & y_2 & x_2y_2 & y_2^2 & x_2y_2^2 & y_2^3 & x_2y_2^3 \\
+			1 & x_3 & y_3 & x_3y_3 & y_3^2 & x_3y_3^2 & y_3^3 & x_3y_3^3 \\
+			& & &  & \dots& & &  \\
+			1 & x_8 & y_8 & x_8y_8 & y_8^2 & x_8y_8^2 & y_8^3 & x_8y_8^3 
+		\end{bmatrix}}_C \begin{bmatrix}
+		\alpha_1 \\ \alpha_2 \\ \alpha_3 \\ \dots \\ \alpha_8 
+		\end{bmatrix} = \begin{bmatrix}
+		\Phi_1 \\ \Phi_2 \\ \Phi_3 \\ \dots \\ \Phi_8
+		\end{bmatrix}
+		\]
+		\[
+		C\cdot\alpha=\Phi \Rightarrow \alpha=C^{-1} \cdot \Phi \\
+		\]
+		\[
+		\varphi=P\alpha=P\cdot C^{-1} \cdot \Phi = N\Phi
+		\]
+		\[
+		P=\begin{bmatrix}
+			1 & x & y & xy & y^2 & xy^2 & y^3 & xy^3
+		\end{bmatrix}, \quad \alpha=\begin{bmatrix}
+		\alpha_1 & \dots & \alpha_8
+		\end{bmatrix}
+		\]
+		
+		\underline{Самая большая сложность - в составлении $C^{-1}$.}
+		
+		\begin{center}
+			\textbf{Серендипово семейство}
+		\end{center}
+		
+		Линейная аппроксимация: 
+		\[
+		\varphi = \alpha_1 +\alpha_2 x+\alpha_3 y +\alpha_4 xy
+		\]
+		\[
+		\begin{bmatrix}
+			1 & -b & -a & ab \\
+			1 & b & -a &-ab \\
+			1 & b & a & ab \\
+			1 & -b & a & -ab
+		\end{bmatrix}
+		\begin{bmatrix}
+			\alpha_1 \\ \alpha_2 \\ \alpha_3 \\ \alpha_4 
+		\end{bmatrix} = \begin{bmatrix}
+		\Phi_1 \\ \Phi_2 \\ \Phi_3 \\ \Phi_4  		
+		\end{bmatrix}; \qquad C^{-1}= \begin{bmatrix}
+		\frac{1}{4} & \frac{1}{4} & \frac{1}{4} & \frac{1}{4} \\
+		-\frac{1}{4b} & \frac{1}{4b} & \frac{1}{4b} & -\frac{1}{4b} \\
+		-\frac{1}{4a} & -\frac{1}{4a} & \frac{1}{4a} & \frac{1}{4a} \\
+		\frac{1}{4ab} & -\frac{1}{4ab} & \frac{1}{4ab} & -\frac{1}{4ab} 
+		\end{bmatrix}
+		\]
+		\[
+	N = P\cdot C^{-1} = \frac{1}{4ab}\begin{bmatrix}
+		1 & x & y & xy 
+	\end{bmatrix} \begin{bmatrix}
+	ab & ab & ab & ab \\
+	-a & a & a & -a \\
+	-b & -b & b & b \\
+	1 & -1 & 1 & -1
+	\end{bmatrix} =  \frac{1}{4ab} \begin{bmatrix}
+	(b-x)(a-y) \\ (b+x)(a-y) \\ (b+x)(a+y) \\ (b-x)(a+y)
+	\end{bmatrix}
+		\]
+		
+	Этот метод не рационален. Поэтому функции формы будем искать так:
+	
+	\end{enumerate}
 \end{document}
